--- a/C181077-Lab-4.ipynb
+++ b/C181077-Lab-4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b447eab0",
+   "id": "e8b98675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c1b4c932",
+   "id": "428bada4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +47,11 @@
     "    return exps / np.sum(exps)\n",
     "  \n",
     "  def forward_pass(self, x):\n",
-    "    x = x.reshape(1, -1) # (1, 2)\n",
-    "    self.A1 = np.matmul(x,self.W1) + self.B1  # (1, 2) * (2, 2) -> (1, 2)\n",
-    "    self.H1 = self.sigmoid(self.A1) # (1, 2)\n",
-    "    self.A2 = np.matmul(self.H1, self.W2) + self.B2 # (1, 2) * (2, 4) -> (1, 4) \n",
-    "    self.H2 = self.softmax(self.A2) # (1, 4)\n",
+    "    x = x.reshape(1, -1)\n",
+    "    self.A1 = np.matmul(x,self.W1) + self.B1\n",
+    "    self.H1 = self.sigmoid(self.A1)\n",
+    "    self.A2 = np.matmul(self.H1, self.W2) + self.B2\n",
+    "    self.H2 = self.softmax(self.A2) \n",
     "    return self.H2\n",
     "    \n",
     "  def grad_sigmoid(self, x):\n",
@@ -59,18 +59,18 @@
     "  \n",
     "  def grad(self, x, y):\n",
     "    self.forward_pass(x)\n",
-    "    x = x.reshape(1, -1) # (1, 2)\n",
-    "    y = y.reshape(1, -1) # (1, 4)\n",
+    "    x = x.reshape(1, -1) \n",
+    "    y = y.reshape(1, -1) \n",
     "    \n",
-    "    self.dA2 = self.H2 - y # (1, 4) \n",
+    "    self.dA2 = self.H2 - y \n",
     "    \n",
-    "    self.dW2 = np.matmul(self.H1.T, self.dA2) # (2, 1) * (1, 4) -> (2, 4)\n",
+    "    self.dW2 = np.matmul(self.H1.T, self.dA2) \n",
     "    self.dB2 = self.dA2 # (1, 4)\n",
-    "    self.dH1 = np.matmul(self.dA2, self.W2.T) # (1, 4) * (4, 2) -> (1, 2)\n",
-    "    self.dA1 = np.multiply(self.dH1, self.grad_sigmoid(self.H1)) # -> (1, 2)\n",
+    "    self.dH1 = np.matmul(self.dA2, self.W2.T) \n",
+    "    self.dA1 = np.multiply(self.dH1, self.grad_sigmoid(self.H1))\n",
     "    \n",
-    "    self.dW1 = np.matmul(x.T, self.dA1) # (2, 1) * (1, 2) -> (2, 2)\n",
-    "    self.dB1 = self.dA1 # (1, 2)\n",
+    "    self.dW1 = np.matmul(x.T, self.dA1)\n",
+    "    self.dB1 = self.dA1\n",
     "\n",
     "  \n",
     "  def fit(self, X, Y, epochs=1, learning_rate=1, display_loss=False):\n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "807dbaf0",
+   "id": "46d773e5",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "01213cc7",
+   "id": "7541b0e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e43aaf26",
+   "id": "eb3142f1",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "76a5e56b",
+   "id": "9abd630d",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c6739338",
+   "id": "b517adbd",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2a16d09f",
+   "id": "133dedf4",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b5d94d4c",
+   "id": "918a9772",
    "metadata": {},
    "outputs": [
     {
